--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-<button id="play" disabled>Yodel!</button>
+<button id="play_mp3" disabled>Yodel! MP3</button>
+<button id="play_aac" disabled>AAC! AAC</button>
 </body>
 
 <script src="js/script.js"></script>
